--- a/HelloTypeScript/HelloTypeScript.csproj
+++ b/HelloTypeScript/HelloTypeScript.csproj
@@ -102,6 +102,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="AdvancedTypes.ts" />
     <TypeScriptCompile Include="Functions.ts" />
+    <TypeScriptCompile Include="Interfaces.ts" />
     <TypeScriptCompile Include="SimpleJasmineTests.ts" />
     <TypeScriptCompile Include="app.ts" />
     <TypeScriptCompile Include="Types.ts" />
