--- a/HelloTypeScript/HelloTypeScript.csproj
+++ b/HelloTypeScript/HelloTypeScript.csproj
@@ -103,6 +103,7 @@
     <TypeScriptCompile Include="AdvancedTypes.ts" />
     <TypeScriptCompile Include="Classes.ts" />
     <TypeScriptCompile Include="Functions.ts" />
+    <TypeScriptCompile Include="Inheritance.ts" />
     <TypeScriptCompile Include="Interfaces.ts" />
     <TypeScriptCompile Include="SimpleJasmineTests.ts" />
     <TypeScriptCompile Include="app.ts" />
