--- a/HelloTypeScript/HelloTypeScript.csproj
+++ b/HelloTypeScript/HelloTypeScript.csproj
@@ -102,6 +102,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="AdvancedTypes.ts" />
     <TypeScriptCompile Include="Classes.ts" />
+    <TypeScriptCompile Include="Decorators.ts" />
     <TypeScriptCompile Include="Functions.ts" />
     <TypeScriptCompile Include="Inheritance.ts" />
     <TypeScriptCompile Include="Interfaces.ts" />
