--- a/HelloTypeScript/tsconfig.json
+++ b/HelloTypeScript/tsconfig.json
@@ -5,7 +5,8 @@
     "noEmitOnError": true,
     "removeComments": false,
     "sourceMap": true,
-    "target": "es5"
+    "target": "es5",
+    "experimentalDecorators": true
   },
   "exclude": [
     "node_modules"
