--- a/HelloTypeScript/tsconfig.json
+++ b/HelloTypeScript/tsconfig.json
@@ -6,7 +6,8 @@
     "removeComments": false,
     "sourceMap": true,
     "target": "es5",
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    //"emitDecoratorMetadata": true
   },
   "exclude": [
     "node_modules"
