--- a/HelloTypeScript/tsconfig.json
+++ b/HelloTypeScript/tsconfig.json
@@ -7,7 +7,7 @@
     "sourceMap": true,
     "target": "es5",
     "experimentalDecorators": true,
-    //"emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true
   },
   "exclude": [
     "node_modules"
