--- a/HelloTypeScript/tsconfig.json
+++ b/HelloTypeScript/tsconfig.json
@@ -7,7 +7,8 @@
     "sourceMap": true,
     "target": "es5",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "lib" : [ "dom", "es2015", "es5"]
   },
   "exclude": [
     "node_modules"
