--- a/HelloTypeScript/HelloTypeScript.csproj
+++ b/HelloTypeScript/HelloTypeScript.csproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="ErrorHelper.js" />
     <Content Include="tsconfig.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -103,7 +104,9 @@
     <TypeScriptCompile Include="AdvancedTypes.ts" />
     <TypeScriptCompile Include="Asynchronous.ts" />
     <TypeScriptCompile Include="Classes.ts" />
+    <TypeScriptCompile Include="DeclarationFile.ts" />
     <TypeScriptCompile Include="Decorators.ts" />
+    <TypeScriptCompile Include="ErrorHelper.d.ts" />
     <TypeScriptCompile Include="Functions.ts" />
     <TypeScriptCompile Include="Generics.ts" />
     <TypeScriptCompile Include="globals.d.ts" />
