--- a/HelloTypeScript/tsconfig.json
+++ b/HelloTypeScript/tsconfig.json
@@ -8,7 +8,7 @@
     "target": "es5",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "lib" : [ "dom", "es2015", "es5"]
+    "lib" : [ "dom", "es6"]
   },
   "exclude": [
     "node_modules"
