--- a/HelloTypeScript/HelloTypeScript.csproj
+++ b/HelloTypeScript/HelloTypeScript.csproj
@@ -113,7 +113,7 @@
     <TypeScriptCompile Include="GlobalVariables.ts" />
     <TypeScriptCompile Include="Inheritance.ts" />
     <TypeScriptCompile Include="Interfaces.ts" />
-    <TypeScriptCompile Include="SimpleJasmineTests.ts" />
+    <TypeScriptCompile Include="SomeTests.ts" />
     <TypeScriptCompile Include="app.ts" />
     <TypeScriptCompile Include="Types.ts" />
   </ItemGroup>
