--- a/HelloTypeScript/HelloTypeScript.csproj
+++ b/HelloTypeScript/HelloTypeScript.csproj
@@ -106,6 +106,7 @@
     <TypeScriptCompile Include="Classes.ts" />
     <TypeScriptCompile Include="DeclarationFile.ts" />
     <TypeScriptCompile Include="Decorators.ts" />
+    <TypeScriptCompile Include="Dict.ts" />
     <TypeScriptCompile Include="ErrorHelper.d.ts" />
     <TypeScriptCompile Include="Functions.ts" />
     <TypeScriptCompile Include="Generics.ts" />
